# PulseDeck

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt
data/: com.pulsedeck.app.desktop
pulsedeck/: __init__.py  __main__.py  app.py
pulsedeck/managers/: apps.py
pulsedeck/monitors/: __init__.py  cpu.py  memory.py  network.py  storage.py  thermal.py
pulsedeck/ui/: widgets.py  window.py
pulsedeck/ui/pages/: __init__.py  apps_page.py  cpu_page.py  dashboard.py  memory_page.py  network_page.py  storage_page.py  thermal_page.py
pulsedeck/utils/: helpers.py
