[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulsedeck"
version = "1.1.0"
description = "Lightweight System Monitor & Assistant for Linux"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "arif481"},
]
keywords = ["system-monitor", "linux", "gtk4", "libadwaita", "psutil"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "psutil>=5.9.0",
    "PyGObject>=3.42.0",
]

[project.urls]
Homepage = "https://github.com/arif481/PulseDeck"
Repository = "https://github.com/arif481/PulseDeck"
"Bug Tracker" = "https://github.com/arif481/PulseDeck/issues"
Changelog = "https://github.com/arif481/PulseDeck/blob/main/CHANGELOG.md"

[project.scripts]
pulsedeck = "pulsedeck.__main__:main"

[project.gui-scripts]
pulsedeck-gui = "pulsedeck.__main__:main"

[tool.setuptools.packages.find]
include = ["pulsedeck*"]
